--- a/packages/ts-lib-scripts-utils/package.json
+++ b/packages/ts-lib-scripts-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-lib-scripts-utils",
-  "version": "0.0.13",
+  "version": "0.0.15",
   "description": "ts-lib-scripts公用方法",
   "license": "MIT",
   "main": "dist/index.js",
@@ -16,5 +16,8 @@
   "files": [
     "dist/**/*"
   ],
-  "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b"
+  "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b",
+  "dependencies": {
+    "chalk": "^2.4.2"
+  }
 }
