fix: 修复在发布项目时，vscode的jest插件会崩溃，eslint会提示代码错误的缺陷

--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "test": "ts-lib-tools test",
     "test:coverage": "ts-lib-tools test --coverage",
     "build": "tsc --build packages/tsconfig.json",
-    "clean": "rimraf packages/**/dist packages/**/tsconfig.tsbuildinfo",
+    "clean": "yarn build --clean",
     "postinstall": "yarn build",
-    "prepublishOnly": "yarn clean && yarn build --force"
+    "prepublishOnly": "yarn clean && yarn build"
   },
   "jest": {
     "testRegex": "/packages/.*\\.(spec|test)\\.tsx?$"
