feat(ts-lib-scripts): 生成react组件库

--- a/packages/ts-lib-scripts/assets/common-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/common-template/tsconfig.json
@@ -25,6 +25,7 @@
     "allowJs": false,
     "baseUrl": "./",
     "rootDir": "./src",
-    "outDir": "./build"
+    "outDir": "./build",
+    "resolveJsonModule": true
   }
 }
