--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "arrowParens": "always"
   },
   "scripts": {
-    "lint": "eslint --ignore-pattern **/*.d.ts --ext .ts --ext .tsx packages/",
-    "format": "eslint --ignore-pattern **/*.d.ts --fix --ext .ts --ext .tsx packages/",
+    "lint": "eslint --ignore-pattern **/*.d.ts assets --ext .ts --ext .tsx packages/",
+    "format": "eslint --ignore-pattern **/*.d.ts assets --fix --ext .ts --ext .tsx packages/",
     "test": "ts-lib-tools test",
     "test:coverage": "ts-lib-tools test --coverage",
     "build": "tsc --build packages/tsconfig.json",
@@ -61,7 +61,11 @@
     "prepublishOnly": "yarn clean && yarn build"
   },
   "jest": {
-    "testRegex": "/packages/.*\\.(spec|test)\\.tsx?$"
+    "testRegex": "\\/packages\\/.*\\.(spec|test)\\.tsx?$",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/assets/"
+    ]
   },
   "husky": {
     "hooks": {
@@ -69,10 +73,15 @@
     }
   },
   "lint-staged": {
-    "packages/**/*.{ts,tsx}": [
-      "cross-env CI=true ts-lib-tools test",
-      "eslint --fix --color",
-      "git add"
+    "linters": {
+      "packages/**/*.{ts,tsx}": [
+        "cross-env CI=true ts-lib-tools test",
+        "eslint --fix --color",
+        "git add"
+      ]
+    },
+    "ignore": [
+      "**/assets/**"
     ]
   }
 }
