--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -25,6 +25,7 @@
     "index.js"
   ],
   "dependencies": {
+    "@svgr/rollup": "^4.3.0",
     "@types/jest": "^24.0.13",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
@@ -68,7 +69,8 @@
     "@types/fs-extra": "^7.0.0",
     "@types/prettier": "^1.16.4",
     "@types/rollup-plugin-json": "^3.0.2",
-    "@types/rollup-plugin-sourcemaps": "^0.4.1"
+    "@types/rollup-plugin-sourcemaps": "^0.4.1",
+    "typescript": "^3.5.1"
   },
   "peerDependencies": {
     "typescript": "^3.4.0"
