fix: 修复无法运行单元测试的缺陷

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "prepublishOnly": "yarn clean && yarn build"
   },
   "jest": {
-    "testRegex": "\\/packages\\/.*\\.(spec|test)\\.tsx?$",
+    "testRegex": "/packages/.*\\.(spec|test)\\.tsx?$",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/assets/"
