--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -73,7 +73,7 @@
     "typescript": "^3.5.1"
   },
   "peerDependencies": {
-    "typescript": "^3.4.0"
+    "typescript": ">=3.4.0"
   },
   "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b"
 }
