--- a/examples/package.json
+++ b/examples/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ts-lib-scripts-example",
-  "version": "0.1.7",
+  "version": "0.2.0-alpha.0",
   "private": true,
   "dependencies": {
-    "ts-lib-tools": "^0.1.7"
+    "ts-lib-tools": "^0.2.0-alpha.0"
   },
   "scripts": {
     "start": "ts-lib-tools watch",
