--- a/packages/ts-lib-scripts/package.json
+++ b/packages/ts-lib-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-lib-scripts",
-  "version": "0.2.0-alpha.0",
+  "version": "0.2.0-0.2.0-alpha.1.0",
   "description": "一个以 🚀 速度创建零配置 TypeScript 库项目的命令行工具",
   "license": "MIT",
   "homepage": "https://github.com/sinoui/ts-lib-scripts",
