feat(ts-lib-scripts): 启用ts 3.4的incremental，支持增量编译

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -25,6 +25,7 @@
     "allowJs": false,
     "baseUrl": "./",
     "rootDir": "./src",
-    "declarationDir": "./build"
+    "declarationDir": "./build",
+    "incremental": true
   }
 }
