--- a/packages/ts-lib-scripts/assets/common-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/common-template/tsconfig.json
@@ -26,6 +26,7 @@
     "baseUrl": "./",
     "rootDir": "./src",
     "outDir": "./build",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "incremental": true
   }
 }
