fix(ts-lib-tools): 修复inddex.ts中导出了ts类型导致无法编译的缺陷 (#11)
Closes #11

--- a/examples/package.json
+++ b/examples/package.json
@@ -13,8 +13,10 @@
     "lint": "ts-lib-tools lint"
   },
   "devDependencies": {
+    "@types/react": "^16.8.19",
     "husky": "^2.3.0",
     "lint-staged": "^8.1.7",
+    "react": "^16.8.6",
     "rimraf": "^2.6.3",
     "typescript": "^3.4.5"
   },
