--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "moduleResolution": "node",
     "jsx": "react",
     "esModuleInterop": true,
-    "allowJs": false
+    "allowJs": false,
+    "incremental": true
   }
 }
