--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,17 @@
+*.ts text
+*.tsx text
+*.js text
+*.jsx text
+*.md text
+*.mdx text
+*.json text
+*.lock text
+.editorconfig text
+.gitignore text
+.gitattributes text
+*.txt text
+LICENSE text
+
 [core]
   autocrlf=input
   safecrlf=true
