fix(ts-lib-scripts): 修复 GIT 换行符配置错误
对于历史项目，可以手动调整`.gitattributes`文件：

```ini
*.ts text eol=lf
*.tsx text eol=lf
*.js text eol=lf
*.jsx text eol=lf
*.md text eol=lf
*.mdx text eol=lf
*.json text eol=lf
*.lock text eol=lf
.editorconfig text eol=lf
.gitignore text eol=lf
.gitattributes text eol=lf
*.txt text eol=lf
LICENSE text eol=lf

[core]
  autocrlf=input
  safecrlf=true
```

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,16 @@
-*.ts text
-*.tsx text
-*.js text
-*.jsx text
-*.md text
-*.mdx text
-*.json text
-*.lock text
-.editorconfig text
-.gitignore text
-.gitattributes text
-*.txt text
-LICENSE text
+*.ts text eol=lf
+*.tsx text eol=lf
+*.js text eol=lf
+*.jsx text eol=lf
+*.md text eol=lf
+*.mdx text eol=lf
+*.json text eol=lf
+*.lock text eol=lf
+.editorconfig text eol=lf
+.gitignore text eol=lf
+.gitattributes text eol=lf
+*.txt text eol=lf
+LICENSE text eol=lf
 
 [core]
   autocrlf=input
