fix(webpack-docz-ghpages-plugin): 修复包主文件错误

--- a/packages/webpack-docz-ghpages-plugin/package.json
+++ b/packages/webpack-docz-ghpages-plugin/package.json
@@ -15,7 +15,7 @@
     "dist/**/*",
     "index.js"
   ],
-  "main": "dist/index.js",
+  "main": "index.js",
   "devDependencies": {
     "@types/webpack": "^4.4.34",
     "webpack": "^4.35.3"
