--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-lib-tools",
-  "version": "0.2.15",
+  "version": "0.2.16",
   "description": "ts-lib-scripts创建的ts项目使用的开箱即用命令和配置。",
   "license": "MIT",
   "homepage": "https://github.com/sinoui/ts-lib-scripts",
@@ -67,11 +67,11 @@
     "@types/chalk": "^2.2.0",
     "@types/execa": "^0.9.0",
     "@types/fs-extra": "^7.0.0",
+    "@types/jest": "^24.0.13",
     "@types/prettier": "^1.16.4",
     "@types/rollup-plugin-json": "^3.0.2",
     "@types/rollup-plugin-sourcemaps": "^0.4.1",
-    "typescript": "^3.5.1",
-    "@types/jest": "^24.0.13"
+    "typescript": "^3.5.1"
   },
   "peerDependencies": {
     "typescript": ">=3.4.0"
