--- a/packages/babel-preset-ts-lib/package.json
+++ b/packages/babel-preset-ts-lib/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-macros": "^2.5.1",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-rename-import": "^2.3.0"
   },
   "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b"
