fix(ts-lib-scripts): 修复 tsconfig 配置错误，导致 ts 找不到内部模块的缺陷

--- a/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
@@ -25,6 +25,7 @@
     "allowJs": false,
     "resolveJsonModule": true,
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
       "*": ["packages/*/src"]
     }
