feat: 规范vscode的换行符和缩进
* 换行符：LF
* 缩进：2个空格
* 不从文件本身侦测换行符和缩进配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
     { "language": "typescript", "autoFix": true },
     { "language": "typescriptreact", "autoFix": true }
   ],
-  "jest.pathToJest": "npm test --"
+  "jest.pathToJest": "npm test --",
+  "files.eol": "\n",
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false
 }
