--- a/packages/ts-lib-scripts/assets/common-template/.vscode/settings.json
+++ b/packages/ts-lib-scripts/assets/common-template/.vscode/settings.json
@@ -10,5 +10,8 @@
     { "language": "typescript", "autoFix": true },
     { "language": "typescriptreact", "autoFix": true }
   ],
-  "jest.pathToJest": "npm test --"
+  "jest.pathToJest": "npm test --",
+  "files.eol": "\n",
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false
 }
