--- a/packages/ts-lib-scripts-utils/package.json
+++ b/packages/ts-lib-scripts-utils/package.json
@@ -18,6 +18,7 @@
   ],
   "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b",
   "dependencies": {
-    "chalk": "^2.4.2"
+    "chalk": "^2.4.2",
+    "fs-extra": "^7.0.1"
   }
 }
