fix(ts-lib-scripts): 修复monorepo模式，lint-staged配置错误

--- a/packages/ts-lib-scripts/assets/monorepo-template/package.json
+++ b/packages/ts-lib-scripts/assets/monorepo-template/package.json
@@ -34,7 +34,7 @@
     }
   },
   "lint-staged": {
-    "src/*.{ts,tsx}": [
+    "packages/*.{ts,tsx}": [
       "cross-env CI=true ts-lib-tools test",
       "eslint --fix --color",
       "git add"
