fix: 修复prepublishOnly在monorepo模式下配置错误

--- a/packages/ts-lib-tools/packages/module-a/package.json
+++ b/packages/ts-lib-tools/packages/module-a/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "ts-lib-tools build",
     "test": "ts-lib-tools test",
-    "lint": "ts-lib-tools lint"
+    "lint": "ts-lib-tools lint",
+    "prepublishOnly": "ts-lib-tools build"
   }
 }
