fix(ts-lib-scripts): 修复monorepo模式，tsconfig.json的includes配置错误

--- a/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "types"],
+  "include": ["packages", "types", "docs"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "es5",
