--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -39,6 +39,7 @@
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-ts-lib": "^0.3.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
