fix(ts-lib-tools): 修复monorepo中，单元测试包含对模块引用导致单元测试失败的缺陷

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -12,6 +12,9 @@
     },
     {
       "path": "./webpack-docz-ghpages-plugin"
+    },
+    {
+      "path": "./jest-resolver-tsconfig-paths"
     }
   ]
 }
