--- a/package.json
+++ b/package.json
@@ -16,23 +16,25 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-jest": "^24.8.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-ts-lib": "^0.3.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "1.7.0",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "jest-watch-typeahead": "^0.3.1",
     "lerna": "^3.14.1",
     "lint-staged": "^8.1.7",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
     "typescript": "^3.4.5"
   },
@@ -51,8 +53,8 @@
     "arrowParens": "always"
   },
   "scripts": {
-    "lint": "eslint --ignore-pattern **/*.d.ts **/assets/** **/node_modules/** --ext .ts --ext .tsx packages/",
-    "format": "eslint --ignore-pattern **/*.d.ts --fix --ext .ts --ext .tsx packages/",
+    "lint": "eslint --ignore-pattern **/node_modules/* --ext .ts --ext .tsx packages/",
+    "format": "eslint --fix --ext .ts --ext .tsx packages/",
     "test": "ts-lib-tools test",
     "test:coverage": "ts-lib-tools test --coverage",
     "build": "tsc --build packages/tsconfig.json",
