--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -27,30 +27,30 @@
   "dependencies": {
     "@svgr/rollup": "^4.3.0",
     "@types/jest": "^24.0.18",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-jest": "^24.9.0",
     "babel-preset-ts-lib": "^0.3.0",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "^4.3.0",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-config-ts-lib": "^0.3.0",
     "eslint-import-resolver-typescript": "^1.1.1",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "1.7.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
     "globby": "^9.2.0",
     "jest": "^24.9.0",
     "jest-watch-typeahead": "^0.3.1",
     "ora": "^3.4.0",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "progress-estimator": "^0.2.2",
     "rollup": "^1.12.1",
     "rollup-plugin-babel": "^4.3.2",
