--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -63,6 +63,7 @@
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.21.0",
     "ts-lib-scripts-utils": "^0.3.0",
+    "tsconfig-paths": "^3.8.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
