--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,19 @@
   "javascript.format.enable": false,
   "typescript.format.enable": false,
   "eslint.enable": true,
+  "eslint.autoFixOnSave": true,
   "prettier.eslintIntegration": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
-    { "language": "typescript", "autoFix": true },
-    { "language": "typescriptreact", "autoFix": true }
+    {
+      "language": "typescript",
+      "autoFix": true
+    },
+    {
+      "language": "typescriptreact",
+      "autoFix": true
+    }
   ],
   "jest.pathToJest": "npm test --",
   "files.eol": "\n",
