--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -25,7 +25,7 @@
     "index.js"
   ],
   "dependencies": {
-    "@svgr/rollup": "^4.3.0",
+    "@svgr/rollup": "^4.3.2",
     "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
@@ -33,48 +33,50 @@
     "babel-preset-ts-lib": "^0.4.0",
     "camelcase": "^5.3.1",
     "chalk": "^2.4.2",
-    "commander": "^2.20.0",
+    "commander": "^3.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "6.1.0",
+    "eslint": "6.2.1",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-ts-lib": "^0.4.3",
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "1.7.0",
-    "execa": "^1.0.0",
-    "fs-extra": "^7.0.1",
-    "globby": "^9.2.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "execa": "^2.0.4",
+    "fs-extra": "^8.1.0",
+    "globby": "^10.0.1",
     "jest": "^24.9.0",
     "jest-resolver-tsconfig-paths": "^0.4.0",
-    "jest-watch-typeahead": "^0.3.1",
+    "jest-watch-typeahead": "^0.4.0",
     "ora": "^3.4.0",
     "prettier": "^1.18.2",
     "progress-estimator": "^0.2.2",
-    "rollup": "^1.12.1",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-eslint": "^5.1.0",
+    "rollup": "^1.19.4",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.21.0",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-typescript2": "^0.22.1",
     "ts-lib-scripts-utils": "^0.4.0",
     "tsconfig-paths": "^3.8.0",
-    "tslib": "^1.9.3"
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
-    "@types/execa": "^0.9.0",
-    "@types/fs-extra": "^7.0.0",
-    "@types/prettier": "^1.16.4",
+    "@types/execa": "^2.0.0",
+    "@types/fs-extra": "^8.0.0",
+    "@types/jest": "^24.0.18",
+    "@types/prettier": "^1.18.2",
     "@types/rollup-plugin-json": "^3.0.2",
-    "@types/rollup-plugin-sourcemaps": "^0.4.1",
-    "typescript": "^3.5.1"
+    "@types/rollup-plugin-sourcemaps": "^0.4.2",
+    "typescript": "^3.5.3"
   },
   "peerDependencies": {
     "typescript": ">=3.4.0"
