fix(ts-lib-scripts): 修复 monorepo 模板中 lint-staged 范围配置错误

--- a/packages/ts-lib-scripts/assets/monorepo-template/package.json
+++ b/packages/ts-lib-scripts/assets/monorepo-template/package.json
@@ -33,7 +33,7 @@
     }
   },
   "lint-staged": {
-    "packages/*.{ts,tsx}": [
+    "packages/**/*.{ts,tsx}": [
       "cross-env CI=true ts-lib-tools test",
       "eslint --fix --color",
       "git add"
