--- a/packages/ts-lib-scripts/assets/common-template/.gitattributes
+++ b/packages/ts-lib-scripts/assets/common-template/.gitattributes
@@ -10,6 +10,8 @@
 .gitignore text eol=lf
 .gitattributes text eol=lf
 *.txt text eol=lf
+*.html text eol=lf
+*.css text eol=lf
 LICENSE text eol=lf
 
 [core]
