fix(ts-lib-scripts): 修复若干模板错误
- fix(ts-lib-scripts): 修复 React 项目模板的单元测试错误
- fix(ts-lib-scripts): 修复 docz 文档模板中 index.html 错误
- fix(ts-lib-scripts): 默认请用 vscode 的 `eslint.autoFixOnSave` （eslint 插件的自动保存功能）

--- a/packages/ts-lib-scripts/assets/common-template/.vscode/settings.json
+++ b/packages/ts-lib-scripts/assets/common-template/.vscode/settings.json
@@ -3,7 +3,7 @@
   "javascript.format.enable": false,
   "typescript.format.enable": false,
   "eslint.enable": true,
-  "prettier.eslintIntegration": true,
+  "eslint.autoFixOnSave": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
