--- a/packages/babel-preset-ts-lib/package.json
+++ b/packages/babel-preset-ts-lib/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-transform-rename-import": "^2.3.0"
   },
   "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b"
