--- a/packages/ts-lib-scripts/assets/react-template/package.json
+++ b/packages/ts-lib-scripts/assets/react-template/package.json
@@ -35,7 +35,7 @@
     }
   },
   "lint-staged": {
-    "src/*.{ts,tsx}": [
+    "src/**/*.{ts,tsx}": [
       "cross-env CI=true ts-lib-tools test",
       "eslint --fix --color",
       "git add"
