--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -66,7 +66,8 @@
     "rollup-plugin-typescript2": "^0.22.1",
     "ts-lib-scripts-utils": "^0.5.0",
     "tsconfig-paths": "^3.8.0",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "ts-lib-jsdom-polyfill": "^0.5.1"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
