--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-lib-tools",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "ts-lib-scripts创建的ts项目使用的开箱即用命令和配置。",
   "license": "MIT",
   "homepage": "https://github.com/sinoui/ts-lib-scripts",
@@ -38,7 +38,7 @@
     "eslint": "6.2.1",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "^6.1.0",
-    "eslint-config-ts-lib": "^0.5.0",
+    "eslint-config-ts-lib": "^0.5.2",
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
@@ -64,10 +64,10 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-typescript2": "^0.22.1",
+    "ts-lib-jsdom-polyfill": "^0.5.2",
     "ts-lib-scripts-utils": "^0.5.0",
     "tsconfig-paths": "^3.8.0",
-    "tslib": "^1.10.0",
-    "ts-lib-jsdom-polyfill": "^0.5.1"
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
