--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,14 @@ coverage
 # production
 build
 dist
+types/
+!**/src/types
 
 # cache
 .cache
 
 # typescript
-tsconfig.tsbuildinfo
+*.tsbuildinfo
 
 # misc
 .DS_Store
