--- a/packages/jest-resolver-tsconfig-paths/package.json
+++ b/packages/jest-resolver-tsconfig-paths/package.json
@@ -4,7 +4,7 @@
   "description": "支持tsconfig paths的jest模块解析器",
   "license": "MIT",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "homepage": "https://github.com/sinoui/ts-lib-scripts",
   "bugs": {
     "url": "https://github.com/sinoui/ts-lib-scripts/issues"
