--- a/packages/ts-lib-scripts/assets/template/package.json
+++ b/packages/ts-lib-scripts/assets/template/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "umd:main": "dist/sinoui-use-rest-api.umd.production.js",
   "module": "dist/sinoui-use-rest-api.esm.js",
-  "typings": "dist/index.d.ts",
+  "types": "types/index.d.ts",
   "scripts": {
     "start": "ts-lib-tools watch",
     "test": "ts-lib-tools test",
