fix(babel-preset-ts-lib): 修复打包的代码无法在旧版本浏览器上运行的缺陷

--- a/packages/ts-lib-tools/assets/module-template/package.json
+++ b/packages/ts-lib-tools/assets/module-template/package.json
@@ -10,5 +10,17 @@
     "build": "ts-lib-tools build",
     "test": "ts-lib-tools test",
     "lint": "ts-lib-tools lint"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
