--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -40,6 +40,7 @@
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-ts-lib": "^0.7.2",
+    "eslint-config-ts-lib-fast": "^0.7.2",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
