--- a/packages/ts-lib-scripts/assets/template/package.json
+++ b/packages/ts-lib-scripts/assets/template/package.json
@@ -37,7 +37,7 @@
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "cross-env CI=true ts-lib-tools test",
-      "eslint --fix --color",
+      "eslint -c .eslintrc.ci.json --fix --color",
       "git add"
     ]
   },
