fix(ts-lib-tools): rollup 打包时，去掉 ts 类型导入、导出，避免打包失败

--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "typescript": "^3.7.3"
   },
   "eslintConfig": {
-    "extends": "ts-lib"
+    "extends": "ts-lib",
+    "rules": {
+      "no-param-reassign": "off",
+      "no-console": "off"
+    }
   },
   "prettier": {
     "printWidth": 80,
