--- a/packages/babel-preset-ts-lib/package.json
+++ b/packages/babel-preset-ts-lib/package.json
@@ -27,6 +27,8 @@
     "@babel/runtime": "^7.7.6",
     "@types/babel__core": "^7.1.3",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "babel-plugin-clean-dead-imports": "^0.8.0",
+    "babel-plugin-clean-type-exports": "^0.8.0",
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-macros": "^2.6.1",
