--- a/packages/ts-lib-tools/assets/module-template/tsconfig.release.json
+++ b/packages/ts-lib-tools/assets/module-template/tsconfig.release.json
@@ -9,6 +9,6 @@
     "skipLibCheck": true,
     "tsBuildInfoFile": "release.tsbuildinfo"
   },
-  "include": ["src/**/*"],
+  "include": ["src"],
   "references": []
 }
