--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "@rollup/plugin-image": "^2.0.0",
+    "@rollup/plugin-json": "^4.0.0",
     "@svgr/rollup": "^4.3.2",
     "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
@@ -44,7 +45,7 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
     "eslint-plugin-standard": "^4.0.1",
@@ -58,18 +59,16 @@
     "ora": "^3.4.0",
     "prettier": "^1.19.1",
     "progress-estimator": "^0.2.2",
-    "rollup": "^1.27.9",
+    "rollup": "^1.27.13",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-replace": "^2.2.1",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript2": "^0.25.3",
+    "rollup-plugin-terser": "^5.1.3",
     "ts-lib-jsdom-polyfill": "^0.8.0",
     "ts-lib-scripts-utils": "^0.8.0",
-    "tsconfig-paths": "^3.8.0",
+    "tsconfig-paths": "^3.9.0",
     "tslib": "^1.10.0",
     "typescript": "^3.7.3"
   },
