fix(ts-lib-tools): 修复项目中引入图片、svg、json 等文件，ts 提示错误的缺陷

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -29,6 +29,7 @@
     "incremental": true,
     "composite": true,
     "outDir": "dist",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
