--- a/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
@@ -32,6 +32,7 @@
     "composite": true,
     "paths": {
       "*": ["packages/*/src"]
-    }
+    },
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
