--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -17,16 +17,20 @@
   "scripts": {
     "test": "node dist/index.js test"
   },
+  "types": "./lib/ts-lib.d.ts",
   "files": [
     "dist/**/*",
     "assets/**/*",
     "template/**/*",
     "template/.gitignore",
-    "index.js"
+    "index.js",
+    "lib/**/*"
   ],
   "dependencies": {
     "@rollup/plugin-image": "^2.0.0",
     "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-replace": "^2.2.1",
     "@svgr/rollup": "^4.3.2",
     "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
@@ -62,15 +66,14 @@
     "rollup": "^1.27.13",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/plugin-replace": "^2.2.1",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.3",
     "ts-lib-jsdom-polyfill": "^0.8.0",
     "ts-lib-scripts-utils": "^0.8.0",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
+    "typescript-plugin-css-modules": "^2.1.2"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
