improve: 提升 vscode 打开 ts 文件的性能

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -30,6 +30,8 @@
     "composite": true,
     "outDir": "dist",
     "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
