--- a/packages/ts-lib-scripts/assets/common-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/common-template/tsconfig.json
@@ -31,6 +31,7 @@
     "composite": true,
     "resolveJsonModule": true,
     "incremental": true,
+    "isolatedModules": true,
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
