--- a/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
@@ -24,6 +24,7 @@
     "esModuleInterop": true,
     "allowJs": false,
     "resolveJsonModule": true,
+    "isolatedModules": true,
     "incremental": true,
     "baseUrl": ".",
     "outDir": "dist",
