--- a/packages/ts-lib-scripts/assets/common-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/common-template/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["src", "src/**/*.json"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "es5",
@@ -31,7 +31,6 @@
     "composite": true,
     "resolveJsonModule": true,
     "incremental": true,
-    "isolatedModules": true,
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
