fix(ts-lib-tools): 修复无法编译 css 的缺陷

--- a/examples/package.json
+++ b/examples/package.json
@@ -3,6 +3,8 @@
   "version": "0.8.5",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.7.7",
+    "rc-pagination": "^1.20.11",
     "ts-lib-tools": "^0.8.5"
   },
   "scripts": {
