--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -66,6 +66,7 @@
     "rollup": "^1.27.13",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.3",
     "ts-lib-jsdom-polyfill": "^0.8.0",
@@ -82,6 +83,7 @@
     "@types/jest": "^24.0.18",
     "@types/prettier": "^1.18.2",
     "@types/rollup-plugin-json": "^3.0.2",
+    "@types/rollup-plugin-postcss": "^2.0.0",
     "@types/rollup-plugin-sourcemaps": "^0.4.2",
     "typescript": "^3.7.3"
   },
