--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "jsx": "react",
     "esModuleInterop": true,
     "allowJs": false,
-    "incremental": true
+    "incremental": true,
+    "skipLibCheck": true
   }
 }
