--- a/packages/ts-lib-scripts/assets/common-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/common-template/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "src/**/*.json"],
+  "include": ["src"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "es5",
