--- a/packages/ts-lib-tools/assets/module-template/tsconfig.release.json
+++ b/packages/ts-lib-tools/assets/module-template/tsconfig.release.json
@@ -10,5 +10,14 @@
     "tsBuildInfoFile": "release.tsbuildinfo"
   },
   "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spect.tsx",
+    "src/**/___tests__/**/*.ts",
+    "src/**/___tests__/**/*.tsx"
+  ],
   "references": []
 }
