--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 *.json text eol=lf
 *.lock text eol=lf
 .editorconfig text eol=lf
+.tsbuildinfo text eol=lf
 .gitignore text eol=lf
 .gitattributes text eol=lf
 *.txt text eol=lf
