fix(ts-lib-tools): 修复打包失败的缺陷

--- a/examples/package.json
+++ b/examples/package.json
@@ -47,5 +47,6 @@
       "git add"
     ]
   },
-  "module": "dist/ts-lib-scripts-example.esm.js"
+  "module": "dist/ts-lib-scripts-example.esm.js",
+  "types": "types/index.d.ts"
 }
