--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src"],
+  "include": ["src", "src/**/*.json"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "es5",
