--- a/packages/ts-lib-tools/assets/module-template/tsconfig.release.json
+++ b/packages/ts-lib-tools/assets/module-template/tsconfig.release.json
@@ -16,8 +16,8 @@
     "**/*.test.tsx",
     "**/*.spec.ts",
     "**/*.spect.tsx",
-    "src/**/___tests__/**/*.ts",
-    "src/**/___tests__/**/*.tsx"
+    "**/___tests__/**",
+    "**/___tests__/**"
   ],
   "references": []
 }
