--- a/packages/ts-lib-scripts/assets/template/package.json
+++ b/packages/ts-lib-scripts/assets/template/package.json
@@ -8,12 +8,12 @@
   "module": "dist/sinoui-use-rest-api.esm.js",
   "types": "types/index.d.ts",
   "scripts": {
-    "start": "ts-lib-tools watch",
     "test": "ts-lib-tools test",
-    "build": "ts-lib-tools build",
+    "build": "ts-lib-tools build --simple",
     "format": "ts-lib-tools format",
     "lint": "ts-lib-tools lint",
-    "prepublishOnly": "ts-lib-tools build"
+    "prepublishOnly": "ts-lib-tools build",
+    "release": "yarn publish dist --tag latest"
   },
   "prettier": {
     "printWidth": 80,
@@ -52,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
   }
 }
