fix(ts-lib-scripts): 修复打包时找不到build/es6目录的缺陷

--- a/examples/tsconfig.simple.release.json
+++ b/examples/tsconfig.simple.release.json
@@ -13,7 +13,7 @@
     "module": "esnext",
     "declaration": true,
     "sourceMap": false,
-    "outDir": "./build/es",
+    "outDir": "./build/es6",
     "declarationDir": "./build/types",
     "tsBuildInfoFile": "./build/tsconfig.tsbuildinfo"
   }
