--- a/examples/package.json
+++ b/examples/package.json
@@ -32,20 +32,9 @@
     "jsxBracketSameLine": false,
     "arrowParens": "always"
   },
-  "eslintConfig": {
-    "extends": "ts-lib"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
+  "eslintConfig": { "extends": "ts-lib" },
+  "husky": { "hooks": { "pre-commit": "lint-staged" } },
+  "lint-staged": { "src/**/*.{js,jsx,ts,tsx}": ["eslint --fix", "git add"] },
   "module": "dist/ts-lib-scripts-example.esm.js",
   "types": "types/index.d.ts"
 }
