feat(eslint-config-ts-lib): eslint 支持 cypress

--- a/packages/eslint-config-ts-lib/package.json
+++ b/packages/eslint-config-ts-lib/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-prettier": "3.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "1.x",
-    "eslint-plugin-standard": "4.x"
+    "eslint-plugin-standard": "4.x",
+    "eslint-plugin-cypress": "2.x"
   },
   "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b"
 }
