--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -50,6 +50,7 @@
     "eslint-config-ts-lib": "^0.11.0",
     "eslint-config-ts-lib-fast": "^0.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
