--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,23 +3,11 @@
   "javascript.format.enable": false,
   "typescript.format.enable": false,
   "eslint.enable": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    {
-      "language": "typescript",
-      "autoFix": true
-    },
-    {
-      "language": "typescriptreact",
-      "autoFix": true
-    }
-  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "files.eol": "\n",
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
-  "typescript.tsdk": "node_modules\\typescript\\lib",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
