--- a/packages/ts-lib-scripts/assets/common-template/.vscode/settings.json
+++ b/packages/ts-lib-scripts/assets/common-template/.vscode/settings.json
@@ -3,13 +3,9 @@
   "javascript.format.enable": false,
   "typescript.format.enable": false,
   "eslint.enable": true,
-  "eslint.autoFixOnSave": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    { "language": "typescript", "autoFix": true },
-    { "language": "typescriptreact", "autoFix": true }
-  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "jest.pathToJest": "npm test --",
   "files.eol": "\n",
   "editor.tabSize": 2,
