--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "husky": "^4.2.5",
     "lerna": "^3.16.4",
     "lint-staged": "^8.1.7",
-    "typescript": "^3.8.3",
+    "typescript": "^4.0.0-dev.20200715",
     "typescript-plugin-css-modules": "^2.2.0"
   },
   "eslintConfig": {
