--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -78,7 +78,7 @@
     "ts-lib-scripts-utils": "^0.12.0",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.8.2",
+    "typescript": "^4.0.0-dev.20200715",
     "typescript-plugin-css-modules": "^2.1.2"
   },
   "devDependencies": {
@@ -91,7 +91,7 @@
     "@types/rollup-plugin-json": "^3.0.2",
     "@types/rollup-plugin-postcss": "^2.0.0",
     "@types/rollup-plugin-sourcemaps": "^0.4.2",
-    "typescript": "^3.8.2"
+    "typescript": "^4.0.0-dev.20200715"
   },
   "peerDependencies": {
     "typescript": ">=3.4.0"
