--- a/examples/package.json
+++ b/examples/package.json
@@ -19,7 +19,7 @@
     "lint-staged": "^8.1.7",
     "react": "^16.8.6",
     "rimraf": "^2.6.3",
-    "typescript": "^4.0.0-dev.20200715"
+    "typescript": "^4.0.2"
   },
   "prettier": {
     "printWidth": 80,
