--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -77,8 +77,8 @@
     "ts-lib-jsdom-polyfill": "^0.12.0",
     "ts-lib-scripts-utils": "^0.12.0",
     "tsconfig-paths": "^3.9.0",
-    "tslib": "^1.10.0",
-    "typescript": "^4.0.0-dev.20200715",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.2",
     "typescript-plugin-css-modules": "^2.4.0"
   },
   "devDependencies": {
@@ -91,7 +91,7 @@
     "@types/rollup-plugin-json": "^3.0.2",
     "@types/rollup-plugin-postcss": "^2.0.0",
     "@types/rollup-plugin-sourcemaps": "^0.4.2",
-    "typescript": "^4.0.0-dev.20200715"
+    "typescript": "^4.0.2"
   },
   "peerDependencies": {
     "typescript": ">=3.8.0"
