--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "lib": ["dom", "esnext"],
+    "lib": ["dom", "esnext", "WebWorker"],
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
