fix(eslint-config-ts-lib): 修复 eslint 错误提示

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "esModuleInterop": true,
     "allowJs": false,
     "incremental": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   }
 }
