--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -35,7 +35,7 @@
     "@rollup/plugin-replace": "^2.3.0",
     "@svgr/rollup": "^4.3.2",
     "@types/jest": "^26.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "async": "^3.1.1",
     "babel-jest": "^26.1.0",
@@ -44,19 +44,18 @@
     "chalk": "^2.4.2",
     "commander": "^3.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint": "7.10.0",
+    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-config-ts-lib": "^0.13.4",
     "eslint-config-ts-lib-fast": "^0.13.4",
-    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "7.18.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "execa": "^4.0.0",
     "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
