fix(ts-lib-tools): 修复代码中引入 node_modules 中的 css 文件，导致 jest 单元测试执行失败的缺陷

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "examples"
+    "examples",
+    "e2e/jest-css-transform-demo"
   ],
   "homepage": "https://github.com/sinoui/ts-lib-scripts",
   "bugs": {
