--- a/e2e/jest-css-transform-demo/package.json
+++ b/e2e/jest-css-transform-demo/package.json
@@ -1,13 +1,13 @@
 {
   "name": "jest-css-transform-demo",
-  "version": "0.1.0",
+  "version": "0.13.11",
   "dependencies": {
+    "@types/draft-js": "^0.11.0",
+    "@types/jest": "^26.0.21",
+    "draft-js": "^0.11.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "ts-lib-tools": "^0.13.10",
-    "draft-js": "^0.11.7",
-    "@types/jest": "^26.0.21",
-    "@types/draft-js": "^0.11.0"
+    "ts-lib-tools": "^0.13.11"
   },
   "scripts": {
     "test": "ts-lib-tools test"
