--- a/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/monorepo-template/tsconfig.json
@@ -20,7 +20,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowJs": false,
     "resolveJsonModule": true,
