--- a/e2e/new-jsx-transform-demo/package.json
+++ b/e2e/new-jsx-transform-demo/package.json
@@ -1,12 +1,12 @@
 {
   "name": "new-jsx-transform-demo",
-  "version": "0.13.11",
+  "version": "0.14.0",
   "private": true,
   "dependencies": {
     "rc-pagination": "^1.20.11",
-    "ts-lib-tools": "^0.13.11",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ts-lib-tools": "^0.14.0"
   },
   "scripts": {
     "test": "ts-lib-tools test",
