--- a/packages/jest-resolver-tsconfig-paths/tsconfig.json
+++ b/packages/jest-resolver-tsconfig-paths/tsconfig.json
@@ -7,6 +7,6 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist",
-    "module": "commonjs"
+    "module": "CommonJS"
   }
 }
