--- a/packages/ts-lib-scripts/assets/common-template/tsconfig.json
+++ b/packages/ts-lib-scripts/assets/common-template/tsconfig.json
@@ -29,6 +29,7 @@
     "composite": true,
     "resolveJsonModule": true,
     "incremental": true,
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
+    "forceConsistentCasingInFileNames": true
   }
 }
