--- a/packages/ts-lib-scripts/tsconfig.json
+++ b/packages/ts-lib-scripts/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist",
-    "module": "commonjs"
+    "module": "CommonJS"
   },
   "references": [
     {
