--- a/packages/eslint-config-ts-lib/tsconfig.json
+++ b/packages/eslint-config-ts-lib/tsconfig.json
@@ -5,6 +5,6 @@
     "allowJs": true,
     "noEmit": true,
     "moduleResolution": "node",
-    "module": "commonjs"
+    "module": "CommonJS"
   }
 }
