--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -27,34 +27,36 @@
     "lib/**/*"
   ],
   "dependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
     "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@svgr/rollup": "^5.5.0",
-    "@types/jest": "^26.0.21",
-    "async": "^3.2.0",
-    "babel-jest": "^26.6.3",
+    "@types/jest": "^27.0.1",
+    "async": "^3.2.1",
+    "babel-jest": "^27.1.1",
     "babel-preset-ts-lib": "^0.14.1",
-    "camelcase": "^5.3.1",
-    "chalk": "^2.4.2",
-    "commander": "^3.0.0",
-    "cross-env": "^5.2.0",
+    "camelcase": "^6.2.0",
+    "chalk": "^4.1.2",
+    "commander": "^8.2.0",
+    "cross-env": "^7.0.3",
     "eslint-config-ts-lib": "^0.14.1",
     "eslint-config-ts-lib-fast": "^0.14.1",
-    "execa": "^4.0.0",
-    "fs-extra": "^8.1.0",
-    "globby": "^11.0.0",
+    "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
+    "globby": "^11.0.4",
+    "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.1.1",
     "jest-resolver-tsconfig-paths": "^0.14.0",
-    "jest-watch-typeahead": "^0.6.1",
+    "jest-watch-typeahead": "^0.6.4",
+    "lint-staged": "^11.1.2",
     "md5": "^2.3.0",
-    "ora": "^3.4.0",
-    "prettier": "^2.2.1",
-    "progress-estimator": "^0.2.2",
+    "ora": "^5.4.1",
+    "prettier": "^2.4.0",
+    "progress-estimator": "^0.3.0",
     "rollup": "^2.42.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -69,19 +71,18 @@
     "typescript-plugin-css-modules": "^3.4.0"
   },
   "devDependencies": {
-    "@types/async": "^3.2.5",
+    "@types/async": "^3.2.7",
     "@types/chalk": "^2.2.0",
     "@types/execa": "^2.0.0",
-    "@types/fs-extra": "^8.0.0",
-    "@types/md5": "^2.3.0",
-    "@types/prettier": "^2.2.3",
+    "@types/fs-extra": "^9.0.12",
+    "@types/md5": "^2.3.1",
+    "@types/prettier": "^2.3.2",
     "@types/rollup-plugin-json": "^3.0.2",
     "@types/rollup-plugin-postcss": "^2.0.0",
-    "@types/rollup-plugin-sourcemaps": "^0.4.2",
-    "typescript": "^4.4.2"
+    "@types/rollup-plugin-sourcemaps": "^0.4.2"
   },
   "peerDependencies": {
-    "typescript": ">=3.8.0"
+    "typescript": ">=4.3.5"
   },
   "gitHead": "a0ec9d27b2f24cb228993286530f89957d055b9b"
 }
