--- a/packages/webpack-docz-ghpages-plugin/tsconfig.json
+++ b/packages/webpack-docz-ghpages-plugin/tsconfig.json
@@ -8,7 +8,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "declarationDir": "./dist",
-    "module": "commonjs"
+    "module": "CommonJS"
   },
   "references": [
     {
