--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,9 @@
         "name": "typescript-plugin-css-modules"
       }
     ],
-    "target": "es2017",
-    "module": "commonjs",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "target": "ESNext",
+    "module": "CommonJS",
+    "lib": ["dom", "esnext"],
     "importHelpers": true,
     "declaration": true,
     "sourceMap": true,
@@ -31,6 +28,9 @@
     "allowJs": false,
     "incremental": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true
+  },
+  "exclude": ["**/node_modules", "**/.*/", "**/dist/", "**/build/"]
 }
